# ros_RiNS

./: CMakeLists.txt  bad_map.pgm  bad_map.yaml  face_detector.py  imefajla.pgm  imefajla.yaml  map_goals.py  package.xml
Scripts/: face_detector_new.py  map_goals_new.py
launch/: combined.launch  our_nodes.launch  params.yaml
msg/: MakeMarker.msg  ObjectDetection.msg
scripts/: face_detector.py  map_goals_new.py  marker_service.py
scripts_aljaz/: face_detector.py  map_goals_new.py  marker_service.py
worlds/: rins.world
